[gd_scene load_steps=5 format=3 uid="uid://tybfd5iph5l8"]

[ext_resource type="Script" uid="uid://x55dagi04q13" path="res://Player/player.gd" id="1_nfwjr"]
[ext_resource type="Texture2D" uid="uid://o13uydf1lrx5" path="res://Player/Car.png" id="2_jri7j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cu3of"]
height = 46.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4ntmi"]
height = 46.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_nfwjr")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.8, 0, 0, 1)
rotation = 1.5708
texture = ExtResource("2_jri7j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_cu3of")
debug_color = Color(0, 0.595, 0.7, 0.168627)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.3, 1.3)
position_smoothing_speed = 1.44

[node name="Label" type="Label" parent="."]
offset_right = 190.0
offset_bottom = 152.0
scale = Vector2(0.293161, 0.293161)
theme_override_font_sizes/font_size = 111
text = "222"

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 54.0
offset_top = -1.0
offset_right = 411.0
offset_bottom = 151.0
scale = Vector2(0.154802, 0.154802)
theme_override_font_sizes/font_size = 111
text = "Health"

[node name="Health" type="ProgressBar" parent="CanvasLayer"]
offset_left = 25.0
offset_top = 23.0
offset_right = 145.0
offset_bottom = 50.0
value = 100.0

[node name="lap_label" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.0
offset_bottom = 43.0
grow_horizontal = 0

[node name="lap_name" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -160.0
offset_top = 1.0
offset_right = -90.0
offset_bottom = 44.0
grow_horizontal = 0
text = "lap:"

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(4, 0)
rotation = 1.5708
scale = Vector2(1.05, 1.05)
shape = SubResource("CapsuleShape2D_4ntmi")

[connection signal="oil_affected" from="." to="." method="_on_oil_affected"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
